# ASE_project

./: README.md  electrical_diagram.drawio
project/: .gitignore
project/main/: CMakeLists.txt  buzzer_app.c  buzzer_app.h  display_app.c  display_app.h  main.c  mpu6050_app.c  mpu6050_app.h  mqtt_app.c  mqtt_app.h  power_app.c  power_app.h  st7735.c  st7735_commands.h
